      set (e.g.\sspace{}as part of \code{"all"}) also use the
      \code{(tag = value)} syntax for atomic vectors.

    \item{If the option \code{setWidthOnResize} is set and \code{TRUE},
      \R run in a terminal using a recent \code{readline} library will
      set the \code{width} option when the terminal is
      resized. Suggested by Ralf Goertz.}
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \code{install.packages()} for source packages now has the
      possibility to set a \sQuote{timeout} (elapsed-time limit).  For
      serial installs this uses the \sQuote{timeout} argument of
      \code{system2()}: for parallel installs it requires the
      \command{timeout} utility command from GNU \pkg{coreutils}.
      [This is currently experimental and subject to change.]

      \item It is now possible to set \sQuote{timeouts} (elapsed-time
      limits) for most parts of \command{R CMD check} \emph{via}
      environment variables documented in the \sQuote{R Internals}
      manual. [This depends on the experimental \sQuote{timeout} argument
      of \code{system2()} and hence subject to change, as are the names
      of the environment variables.]
    }
  }

  \subsection{DOCUMENTATION}{
    \itemize{
      \item \sQuote{Writing R Extensions} now mentiones the macros
      \code{MAYBE_REFERENCED}, \code{MAYBE_SHARED}, and
      \code{MARK_NOT_MUTABLE} that should be used by package \code{C}
      code instead \code{NAMED} or \code{SET_NAMED}.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{printCoefmat()} now also works without column names.

      \item The S4 methods on \code{Ops()} for the \code{"structure"} class no
      longer cause infinite recursion when the structure is not an S4 object.

      \item \code{nlm(f, ..)} for the case where \code{f()} has a
      \code{"hessian"} attribute now computes
      \eqn{LL' = H + \mu I}{LL' = H + µI} correctly.  (\PR{17249}).
