@@ -153,7 +153,11 @@ void attribute_hidden R_run_onexits(RCNTXT *cptr)
                R_CheckStack. LT */
             R_Expressions = R_Expressions_keep + 500;
             R_CheckStack();
-            eval(s, c->cloenv);
+            for (; s != R_NilValue; s = CDR(s))
+            {
+                c->conexit = CDR(s);
+                eval(CAR(s), c->cloenv);
+            }
             UNPROTECT(1);
             R_ExitContext = savecontext;
         }
@@ -300,7 +304,11 @@ void endcontext(RCNTXT *cptr)
         cptr->jumptarget = NULL;    /* in case on.exit expr calls return() */
         PROTECT(saveretval);
         PROTECT(s);
-        eval(s, cptr->cloenv);
+        for (; s != R_NilValue; s = CDR(s))
+        {
+            cptr->conexit = CDR(s);
+            eval(CAR(s), cptr->cloenv);
+        }
         R_ReturnedValue = saveretval;
         UNPROTECT(2);
         R_ExitContext = savecontext;
@@ -689,7 +697,15 @@ SEXP attribute_hidden do_sys(SEXP call, SEXP op, SEXP args, SEXP rho)
         return rval;
     case 7: /* sys.on.exit */
         if (R_GlobalContext->nextcontext != NULL)
-            return R_GlobalContext->nextcontext->conexit;
+        {
+            SEXP conexit = R_GlobalContext->nextcontext->conexit;
+            if (conexit == R_NilValue)
+                return R_NilValue;
+            else if (CDR(conexit) == R_NilValue)
+                return CAR(conexit);
+            else
+                return LCONS(R_BraceSymbol, conexit);
+        }
         else
             return R_NilValue;
     case 8: /* sys.parents */
